# RobotPlayingMastermind

./: .gitignore  .gtkrc-2.0  Dockerfile  LICENSE  README.md  requirements.txt
docs/: control.md  control.mdf  game_feedback.txt  llm.md  pick_and_place.py  spawn_world.sh
mastermind/: CMakeLists.txt  package.xml  setup.py
mastermind/mastermind/src/game_state/: game_state.py
mastermind/mastermind/src/llm_model/: gpt_client.py
mastermind/mastermind/src/robot_controller/: spawn_blocks.sh
mastermind/msg/: GuessCheck.msg  Status.msg
mastermind_ws/: README.md
mastermind_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mastermind_ws/install/mastermind/share/mastermind/: package.bash  (+5 more)
mastermind_ws/log/: latest_build
mastermind_ws/src/: README.md
mastermind_ws/src/mastermind/: package.xml  setup.cfg  setup.py
mastermind_ws/src/mastermind/launch/: arm.launch.py  mastermind.rviz  world.launch.py
mastermind_ws/src/mastermind/world/: mastermind.sdf  mastermind.sh  spawn_blocks.sh
mastermind_ws/src/mastermind_interfaces/: CMakeLists.txt  package.xml
mastermind_ws/src/mastermind_interfaces/msg/: Code.msg  GuessCheck.msg  Status.msg
motion_under_allen_enviroment/: README.md
motion_under_allen_enviroment/ros2_ws/src/color_vision/: package.xml  setup.cfg  setup.py
motion_under_allen_enviroment/ros2_ws/src/color_vision/color_vision/: block_color_scanner.py
motion_under_allen_enviroment/ros2_ws/src/color_vision/resource/: color_vision
motion_under_allen_enviroment/ros2_ws/src/lab06_moveit/: package.xml  setup.cfg  setup.py
(+33 files in other folders)
