<?xml version="1.0"?>
<package format="3">
  <name>color_vision</name>
  <version>0.0.1</version>
  <description>Simple color detection node for lab06 overhead camera.</description>

  <maintainer email="you@example.com">Junxian Zhu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
